--- a/app/src/main/res/layout/activity_alarms_list.xml
+++ b/app/src/main/res/layout/activity_alarms_list.xml
@@ -1,16 +1,34 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AlarmsListActivity">
+    xmlns:tools="http://schemas.android.com/tools"
 
-    <ListView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".AlarmsListActivity">
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/myFAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:onClick="onAddClick"
+        android:layout_margin="@dimen/activity_vertical_margin"/>
+
+
+    <ListView
         android:id="@+id/listViewAlarms"
-        android:layout_alignParentTop="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:choiceMode="singleChoice" />
+        android:layout_alignParentTop="true"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:choiceMode="singleChoice"
+        />
+
+
+
 </RelativeLayout>
