--- a/app/src/main/res/layout/alarms_list_item.xml
+++ b/app/src/main/res/layout/alarms_list_item.xml
@@ -1,39 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="40">
+
+        <TextView
+            android:id="@+id/textViewAlarmName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="To work"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewDay1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="Mo" />
+
+            <TextView
+                android:id="@+id/textViewDay2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="Tu"
+                android:layout_marginRight="@dimen/week_day_horizontal_margin" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewDay3"
+                android:text="We"
+                android:layout_marginRight="@dimen/week_day_horizontal_margin" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewDay4"
+                android:text="Th"
+                android:layout_marginRight="@dimen/week_day_horizontal_margin" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewDay5"
+                android:text="Fr"
+                android:layout_marginRight="@dimen/week_day_horizontal_margin"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewDay6"
+                android:text="Sa"
+                android:layout_marginRight="@dimen/week_day_horizontal_margin" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewDay7"
+                android:text="Su"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+        </LinearLayout>
+
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/textViewAlarmName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="To work"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_toLeftOf="@+id/checkBoxAlarmEnabled"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignBottom="@+id/checkBoxAlarmEnabled" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/checkBoxAlarmEnabled"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:checked="false" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="06:30"
         android:id="@+id/textViewAlarmTime"
-        android:layout_below="@+id/textViewAlarmName"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/checkBoxAlarmEnabled"
-        android:layout_alignEnd="@+id/checkBoxAlarmEnabled" />
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:text="06:30"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:gravity="center"
+        android:layout_weight="10"/>
 
-</RelativeLayout>
+</LinearLayout>
