--- a/app/src/main/res/layout/alarms_list_item.xml
+++ b/app/src/main/res/layout/alarms_list_item.xml
@@ -83,7 +83,7 @@
         android:layout_height="match_parent"
         android:text="06:30"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:gravity="center"
-        android:layout_weight="10"/>
+        android:gravity="right|center_vertical"
+        android:layout_weight="20"/>
 
 </LinearLayout>
