--- a/app/src/main/res/layout/activity_alarms_list.xml
+++ b/app/src/main/res/layout/activity_alarms_list.xml
@@ -4,7 +4,6 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".AlarmsListActivity"
     tools:showIn="@layout/AlarmsListActivity">
 
@@ -12,7 +11,9 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize" />
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/primaryColor"
+        />
 
 
     <ListView
