+ enabled in item

--- a/app/src/main/res/layout/activity_alarm_item.xml
+++ b/app/src/main/res/layout/activity_alarm_item.xml
@@ -28,6 +28,13 @@
         android:touchscreenBlocksFocus="false">
 
 
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Enabled"
+            android:id="@+id/checkBoxEnabled"
+            android:checked="false" />
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -125,7 +132,7 @@
         android:layout_alignEnd="@+id/buttonOK"
         android:padding="10dp"
         android:gravity="center"
-        android:onClick="onTimeClick"/>
+        />
 
 
 
