--- a/app/src/main/res/layout/activity_alarms_list.xml
+++ b/app/src/main/res/layout/activity_alarms_list.xml
@@ -23,10 +23,10 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@id/toolbar"
         android:choiceMode="singleChoice"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin" />
+        android:paddingBottom="@dimen/list_padding"
+        android:paddingLeft="@dimen/list_padding"
+        android:paddingRight="@dimen/list_padding"
+        android:paddingTop="@dimen/list_padding" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
