--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
     <dimen name="week_day_horizontal_margin">6dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="list_padding">4dp</dimen>
+    <dimen name="list_spliter_padding">10dp</dimen>
 </resources>
